# pelican

./: .dockerignore  .gitignore  .golangci.yaml  .goreleaser.in.yml  .goreleaser.lotman.in.yml  .goreleaser.yml  .mailmap  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CONTRIBUTE.md  Makefile  POSIXV2_IMPLEMENTATION.md  README.dev.md  README.md  SECURITY.md  _typos.toml  acquire_token.go  config.go  director.go  director_test.go  errorAccum.go  errorAccum_test.go  get_best_cache.go  get_stashserver_caches.go  go.mod  go.sum  handle_cvmfs.go  handle_http.go  handle_http_test.go  handle_ingest.go  main.go  main_test.go  metrics.go  unique_hash_darwin.go  unique_hash_linux.go  unique_hash_windows.go  util.go
.devcontainer/: README.md  devcontainer.json
.github/: copilot-instructions.md
api_token/: api_token.go  api_token_test.go
broker/: broker_test.go  client.go  client_init.go  dialer.go  request_manager.go  server_apis.go  token_utils.go  token_utils_test.go
byte_rate/: byte_rate.go  byte_rate_test.go
cache/: advertise.go  advertise_test.go  broker_client.go  broker_client_windows.go  broker_test.go  cache.go  cache_api.go  cache_api_test.go  cache_cleanup_test.go  cinfo.go  self_monitor.go
cache_ui/: advertise.go  advertise_test.go  broker_client.go  broker_client_windows.go  cinfo.go  self_monitor.go
classads/: classads.go  classads_test.go
client/: acquire_token.go  acquire_token_test.go  anycast_test.go  bearer_auth.go  bearer_auth_test.go  dir_resp_cache.go  dir_resp_cache_test.go  director.go  director_test.go  errorAccum.go  errorAccum_test.go  error_helpers.go  evict.go  fed_linux_test.go  fed_long_test.go  fed_object_metadata_test.go  fed_test.go  get_best_cache.go  get_stashserver_caches.go  handle_http.go  handle_http_copy.go  handle_http_test.go  handle_ingest.go  http_copy.go  http_copy_test.go  inplace_test.go  main.go  main_test.go  object_metadata.go  object_metadata_test.go  pack_handler.go  pack_test.go  path_utils.go  path_utils_test.go  pelican_fs.go  pelican_fs_test.go  prestage.go  prestage_api.go  prestage_api_test.go  refresh.go  (+11 more)
cmd/: api_key.go  (+132 more)
origin_plugins/http_s3/: CMakeLists.txt  README.md
origin_plugins/http_s3/cmake/: FindXrootd.cmake
origin_plugins/http_s3/configs/: export-lib-symbols
origin_plugins/http_s3/src/: AWSCredential.hh  AWSv4-impl.cc  AWSv4-impl.hh  HTTPCommands.cc  HTTPCommands.hh  HTTPDirectory.hh  HTTPFile.cc  HTTPFile.hh  HTTPFileSystem.cc  HTTPFileSystem.hh  S3Commands.cc  S3Commands.hh  S3Directory.hh  S3File.cc  S3File.hh  S3FileSystem.cc  S3FileSystem.hh  shortfile.cc  shortfile.hh  stl_string_utils.cc  stl_string_utils.hh
(+2362 files in other folders)
